[package]
name = "vrf-contract-verifier"
version = "0.8.4"
edition = "2021"
description = "Minimal VRF proof verification for smart contracts"
license = "Apache-2.0"

[dependencies]
# Minimal curve25519-dalek-ng with disabled default features:
# - std (default)
# - u64_backend (default)
# **Use only the "u32_backend" for maximum WASM compatibility**
curve25519-dalek-ng = { version = "4.1.1", default-features = false, features = ["u32_backend", "alloc"] }
sha2 = { version = "0.10", default-features = false }
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = { version = "1.3" }

# NEAR SDK (optional, only when near feature is enabled)
near-sdk = { version = "5.13", optional = true, features = ["unit-testing"] }
# Borsh for NEAR serialization (optional, only when near feature is enabled)
borsh = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
# For generating client-side proofs to test the contract verifier
vrf-wasm = { path = "../vrf-wasm", features = ["browser"] }

[features]
default = []
# Enable for NEAR smart contracts testing
near = ["dep:near-sdk", "dep:borsh"]

[lib]
crate-type = ["cdylib", "rlib"]

