[package]
name = "vrf-wasm-js"
version = "0.4.2"
edition = "2021"
license = "Apache-2.0"
authors = ["Web3Authn <dev@web3authn.com>"]
description = "VRF for WASM environments"
repository = "https://github.com/web3-authn/vrf-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
# import vrf-wasm from the parent directory
vrf-wasm = { path = "../vrf-wasm" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2.15", features = ["js"] }
rand_core = { version = "0.6", default-features = false }
bincode = "1.3.3"