[package]
name = "vrf-wasm"
version = "0.8.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Web3Authn <dev@web3authn.org>", "Mysten Labs <build@mystenlabs.com>"]
description = "VRF for WASM environments"
repository = "https://github.com/web3-authn/vrf-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["browser"]
browser = ["dep:getrandom", "getrandom?/js"]
near = ["dep:near-sdk"]

[dependencies]
auto_ops = "0.3.0"
base64ct = { version = "1.5.3", features = ["alloc"] }
bcs = "0.1.4"
bech32 = "0.9.1"
bincode = "1.3.3"
bs58 = "0.5.0"
derive_more = "0.99.16"
digest = "0.10.6"
hex = "0.4.3"
elliptic-curve = { version = "0.13.2", features = ["hash2curve"] }
generic-array = { version = "0.14.6", features = ["serde"] }
schemars = "0.8.12"
serde = { version = "1.0.152", features = ["derive"] }
serde_with = { version = "3", default-features = false, features = ["alloc", "macros"] }
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = "1.0.38"
zeroize = { version = "1.5.7", features = ["derive"] }

# fastcrypto-derive for derive macro
fastcrypto-derive = { version = "0.1.3" }

# Conditional dependencies
getrandom = { version = "0.2.15", optional = true, default-features = false }
near-sdk = { version = "=5.13.0", optional = true }

# Always included RNG dependencies (no-std)
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

curve25519-dalek-ng = { version = "4.1.1", default-features = false, features = ["u32_backend", "alloc"] }
# disable curve25519-dalek-ng default features:
# - std (default)
# - u64_backend (default)
# Use only the "u32_backend" for maximum WASM compatibility



